--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bootstrap-icons": "^1.9.1",
     "dotenv": "^16.0.1",
     "express-react-views": "^0.11.0",
     "method-override": "^3.0.0",
